--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "4.6",
+    "sass": "^1.80.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
