--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.7.7",
     "bootstrap": "4.6",
+    "jquery": "^3.7.1",
     "sass": "^1.80.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/jquery": "^3",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
